# playground

./: .clang-format  .clangd  .luarc.json  CMakeLists.txt  CMakePresets.json  LICENSE
assets/scripts/: docs.lua  hello.lua  init.lua  player.lua  utils.lua
licenses/: GLM.txt  LUA.txt
src/: main.cpp
src/tengine/: aliases.hpp  asset_manager.cpp  asset_manager.hpp  globals.cpp  globals.hpp  lua_runtime.cpp  lua_runtime.hpp  pch.hpp  script_system.cpp  script_system.hpp  transform.hpp
src/tengine/loaders/: i_asset_loader.hpp
src/tengine/ns/: node.cpp  node.hpp  node_3D.cpp  node_3D.hpp  node_3d.cpp  node_3d.hpp  node_tree.cpp  node_tree.hpp  scene_tree.cpp  scene_tree.hpp
src/tengine/utils/: file_io.cpp  file_io.hpp  logger.cpp  logger.hpp
